- now playlist.js does not show dropdown if you have no community
